# ansible-collection-zyxel-vmg8825

./: .envrc  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  CHANGELOG.rst  README.md  galaxy.yml  pyproject.toml  renovate.json  requirements.txt  run-all-tests.sh  run-tests.sh  tox.ini
.github/: requirements.txt
changelogs/: changelog.yaml  config.yaml
docs/: jwnmulder.zyxel_vmg8825.zyxel2_facts_module.rst  jwnmulder.zyxel_vmg8825.zyxel2_static_dhcp_module.rst  jwnmulder.zyxel_vmg8825.zyxel_dal_raw_module.rst  jwnmulder.zyxel_vmg8825.zyxel_dal_rpc_module.rst  jwnmulder.zyxel_vmg8825.zyxel_login_module.rst  jwnmulder.zyxel_vmg8825.zyxel_logout_module.rst  jwnmulder.zyxel_vmg8825.zyxel_ping_module.rst  jwnmulder.zyxel_vmg8825.zyxel_static_dhcp_module.rst  jwnmulder.zyxel_vmg8825.zyxel_vmg8825_dal_rpc_module.rst  jwnmulder.zyxel_vmg8825.zyxel_vmg8825_facts_module.rst  jwnmulder.zyxel_vmg8825.zyxel_vmg8825_firewall_acls_module.rst  jwnmulder.zyxel_vmg8825.zyxel_vmg8825_firewall_module.rst  jwnmulder.zyxel_vmg8825.zyxel_vmg8825_httpapi.rst  jwnmulder.zyxel_vmg8825.zyxel_vmg8825_nat_port_forwards_module.rst  jwnmulder.zyxel_vmg8825.zyxel_vmg8825_ping_module.rst  jwnmulder.zyxel_vmg8825.zyxel_vmg8825_static_dhcp_module.rst  jwnmulder.zyxel_vmg8825.zyxel_vmg8825_static_dhcp_table_module.rst  kokobana.zyxel_vmg8825.zyxel_vmg8825_dal_rpc_module.rst  kokobana.zyxel_vmg8825.zyxel_vmg8825_facts_module.rst  kokobana.zyxel_vmg8825.zyxel_vmg8825_httpapi.rst  kokobana.zyxel_vmg8825.zyxel_vmg8825_nat_port_forwards_module.rst  kokobana.zyxel_vmg8825.zyxel_vmg8825_ping_module.rst  kokobana.zyxel_vmg8825.zyxel_vmg8825_static_dhcp_module.rst  zyxel_bootlog.txt
rm_builder/: .envrc  generate_all.yml  requirements.txt  run.yml  run_all.yml  update_all.yml  vars.yml
scripts/: ensure-venv.sh  (+1 more)
(+153 files in other folders)
